Updated hero section with new image and text

--- a/index.html
+++ b/index.html
@@ -23,10 +23,27 @@
   </header>
 
   <!-- Hero Section: This is the main banner at the top of the page -->
-  <section class="hero">
-    <h1>Clean Water for Everyone</h1>
-    <p>Join us in bringing safe, clean water to communities in need.</p>
-  </section>
+  <section class="split-hero">
+  <div class="hero-left">
+    <div class="hero-title-group">
+    <h1>You Believe in Change. Clean Water Makes it Possible.</h1>
+    <div class="hero-underline"></div>
+    </div>
+    <p>Your passion fuels real stories of transformation — turning unsafe water into clean solutions that uplift voices and build thriving communities for generations to come.</p>
+
+    <div class="info-box">
+      <p>
+        1 in 10 people worldwide live without access to clean water. You can help change their story. <strong>Donate now and bring clean water to communities in need!</strong>
+      </p>
+      <a href="#" class="give-now-btn">GIVE NOW</a>
+    </div>
+  </div>
+
+  <div class="hero-right">
+    <img src="img/Madagascar_2019_CG-2679.jpg" alt="Girl smiling with clean water" />
+  </div>
+</section>
+
 
   <!-- Story Section: This tells the story of the nonprofit -->
   <section class="story">
