Added Our Story and Another Image

--- a/index.html
+++ b/index.html
@@ -47,11 +47,24 @@
 
   <!-- Story Section: This tells the story of the nonprofit -->
   <section class="story">
+  <div class="story-text">
     <h2>Our Story</h2>
     <p>
       We believe that everyone deserves access to clean water. Our mission is to bring sustainable, clean water solutions to communities around the world through compassion, innovation, and your support.
     </p>
-  </section>
+  </div>
+
+  <div class="story-split">
+    <div class="story-image">
+      <img src="img/Uganda_2021_CG-3715.jpg" alt="Clean water impact photo" />
+    </div>
+
+    <div class="story-quote-box">
+      <blockquote>"Clean water changes everything."</blockquote>
+      <a href="#" class="learn-more-btn">Learn More About Our Mission</a>
+    </div>
+  </div>
+</section>
 
   <!-- Real-World Impact Story Section -->
   <section class="impact-story">
