Finalized structure, design and enhancements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="styles.css" />
   
 </head>
+
+
 <body>
 
   <!-- ✅ Navigation Bar -->
@@ -55,34 +57,53 @@
   </div>
 
   <div class="story-split">
-    <div class="story-image">
-      <img src="img/Uganda_2021_CG-3715.jpg" alt="Clean water impact photo" />
-    </div>
-
-    <div class="story-quote-box">
-      <blockquote>"Clean water changes everything."</blockquote>
-      <a href="#" class="learn-more-btn">Learn More About Our Mission</a>
-    </div>
+  <div class="story-image">
+    <img src="img/JS_20170301_033622_preview.jpg" alt="Clean water impact photo" />
   </div>
+
+  <div class="story-right">
+  <div class="story-quote-box">
+    <blockquote>"Clean water changes everything."</blockquote>
+  </div>
+
+  <div class="story-divider"></div>
+
+  <div class="story-impact-text">
+    <h3>Real Impact: Meet Amina</h3>
+    <p>
+      Amina used to walk miles every day to collect water for her family.
+      Thanks to your support, her village now has a clean water well.
+      Amina can go to school and her family is healthier and happier.
+    </p>
+  </div>
+  <a href="#" class="learn-more-btn">Learn More About Our Mission</a>
+
+</div>
+
+</div>
+
 </section>
 
-  <!-- Real-World Impact Story Section -->
-  <section class="impact-story">
-    <h2>Real Impact: Meet Amina</h2>
-    <div class="impact-content">
-      <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image" />
-      <p>
-        Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
-      </p>
-    </div>
-  </section>
+
 
   <!-- Call-to-Action Section -->
   <section class="call-to-action">
     <h2>Make a Difference</h2>
     <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
-    <a href="#" class="donate-button">Donate Now</a>
+    <a href="#" class="donate-button">Become Involved Now</a>
   </section>
+<footer class="contact-bar">
+  <div class="contact-content">
+    <h3>Contact Us</h3>
+    <p><strong>Tel:</strong> +1 (646) 688-2323</p>
+    <p><strong>Fax:</strong> +1 (929) 367-4827</p>
+    <p>
+      <strong>Donation Processing Center</strong><br />
+      230 Franklin Rd., Ste. 11-II<br />
+      Franklin, TN 37064
+    </p>
+  </div>
+</footer>
 
 </body>
 </html>
